src/components/header/header.global.css
page-header {
  &:not(:defined) {
    opacity: 0;
    font-family: var(--headline2-family);
    font-size: var(--headline2-size);
    font-weight: var(--headline2-weight);
    text-transform: var(--headline2-transform);
    [slot="subtitle"] {
      font-family: var(--headline5-family);
      font-size: var(--headline5-size);
      font-weight: var(--headline5-weight);
      text-transform: var(--headline5-transform);
    }
  }
}

